--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;900&display=swap" rel="stylesheet">
     <script src="main.js"></script>
+    <script src="js/three.js"></script>
     <title>Aaro Lahtinen</title>
 </head>
 <body>
